# btcfi-orakle-6th

./: .editorconfig  .gitignore  CLAUDE.md  Cargo.toml  MULTI_EXCHANGE_SETUP.md  Makefile  README.md  build.rs  package.json
.husky/: commit-msg  pre-commit  pre-push
config/: oracle-node-1.toml  oracle-node-2.toml  oracle-node-3.toml  oracle-node.example.toml
crates/aggregator/: Cargo.toml  build.rs
crates/aggregator/src/: main.rs
crates/bitcoin-client/: Cargo.toml
crates/bitcoin-client/src/: client.rs  lib.rs  scripts.rs  utxo.rs
crates/bitvmx-integration/: Cargo.toml
crates/bitvmx-integration/src/: lib.rs  prover.rs  verifier.rs  vm.rs
crates/committer/: Cargo.toml
crates/committer/src/: main.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  crypto.rs  error.rs  lib.rs  types.rs
crates/defi-primitives/: Cargo.toml
crates/defi-primitives/src/: lib.rs  options.rs  rwa.rs  vaults.rs
crates/oracle-node/: Cargo.toml  README.md
crates/oracle-node/src/: aggregator_client.rs  binance.rs  coinbase.rs  grpc_client.rs  kraken.rs  main.rs
docs/: aggregator-interface-spec.md  grpc-migration-guide.md  oracle-node-architecture.md  oracle-node-poc-design.md
proto/: oracle.proto
scripts/: init.sh  mock_aggregator.py  run_multi_nodes.sh  run_multiple_nodes.sh  stop_nodes.sh  test_aggregator.py  test_exchanges.sh  test_oracle.sh
src/: main.rs
