[workspace]
members = [
    "crates/oracle-node",
    "crates/aggregator",
    "crates/committer",
    "crates/bitcoin-client",
    "crates/bitvmx-integration",
    "crates/defi-primitives",
    "crates/common",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["BTCFi Team"]
license = "MIT"
repository = "https://github.com/btcfi/oracle-vm"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Cryptography
sha2 = "0.10"
sha3 = "0.10"
secp256k1 = { version = "0.28", features = ["rand-std"] }

# Bitcoin
bitcoin = "0.31"
bitcoind = "0.34"

# Networking
libp2p = "0.53"
reqwest = { version = "0.11", features = ["json"] }

# gRPC
tonic = "0.12"
prost = "0.13"
tokio-stream = "0.1"
futures = "0.3"

# Database
rocksdb = "0.21"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Testing
proptest = "1.4"
mockall = "0.12"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.6", features = ["v4"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Metrics
prometheus = "0.13"

