[package]
name = "aggregator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "aggregator"
path = "src/main.rs"

[dependencies]
oracle-vm-common = { path = "../common" }

tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }

# gRPC
tonic = { workspace = true }
prost = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Time
chrono = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"

[build-dependencies]
tonic-build = "0.12"