[package]
name = "bitcoin-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
oracle-vm-common = { path = "../common" }

bitcoin = { workspace = true }
bitcoind = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"