[package]
name = "oracle-vm-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
secp256k1 = { workspace = true }
bitcoin = { workspace = true, features = ["serde"] }
rand = "0.8"

[dev-dependencies]
proptest = { workspace = true }