[package]
name = "defi-primitives"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
oracle-vm-common = { path = "../common" }

serde = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"