[package]
name = "oracle-node"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "oracle-node"
path = "src/main.rs"

[dependencies]
oracle-vm-common = { path = "../common" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Networking
libp2p = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Time  
chrono = { workspace = true, features = ["serde", "std"] }

# CLI
clap = { workspace = true }

# Crypto
secp256k1 = { workspace = true }

# Config
toml = "0.8"

# UUID generation
uuid = { version = "1.6", features = ["v4"] }

# gRPC
tonic = { workspace = true }
prost = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
mockall = { workspace = true }
tokio-test = "0.4"

[build-dependencies]
tonic-build = "0.12"